corrected the vertical align in the image section

--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -453,7 +453,7 @@ ul.footer{
     height: 30rem;
     width: 100%;
     object-fit: cover;
-    align-items: bottom;
+    vertical-align: bottom;
 }
 
 .card-work .card-inner{
